Fix life and seconds covered by title bar problem

--- a/style/style.css
+++ b/style/style.css
@@ -18,5 +18,6 @@ body{
     }
     #root {
         width: 500px;
+        z-index: 100000
     }
 }	
